# rust-plugin-demo

./: .gitignore  Cargo.toml  Makefile  PLUGIN_LIFECYCLE_PLAN.md  README.md  agent.md
.playwright-cli/: page-2026-07-08T06-49-50-484Z.yml  page-2026-07-08T06-53-25-965Z.yml  page-2026-07-08T07-00-57-317Z.yml  page-2026-07-08T07-01-05-764Z.yml  page-2026-07-08T07-02-06-389Z.yml  page-2026-07-08T07-27-01-036Z.yml  page-2026-07-08T08-13-58-363Z.yml  page-2026-07-08T08-18-00-935Z.yml  page-2026-07-08T08-24-16-526Z.yml  page-2026-07-08T08-24-20-930Z.yml  page-2026-07-17T06-28-50-675Z.yml  page-2026-07-17T06-30-07-402Z.yml  page-2026-07-17T06-31-08-104Z.yml  page-2026-07-17T06-36-11-764Z.yml  page-2026-07-17T06-43-10-813Z.yml  page-2026-07-17T06-58-39-530Z.yml  page-2026-07-17T08-15-50-915Z.yml  page-2026-07-17T09-15-40-559Z.yml  page-2026-07-17T09-15-41-689Z.yml  page-2026-07-19T06-35-29-656Z.yml  page-2026-07-19T06-38-55-787Z.yml  page-2026-07-19T06-39-33-727Z.yml  page-2026-07-19T06-43-53-286Z.yml  page-2026-07-23T02-18-31-666Z.yml  page-2026-07-23T02-18-55-730Z.yml  page-2026-07-23T02-21-09-500Z.yml  page-2026-07-23T02-21-28-321Z.yml  page-2026-07-23T02-21-30-565Z.yml  page-2026-07-23T02-21-41-246Z.yml  page-2026-07-23T02-25-56-941Z.yml  page-2026-07-23T02-31-36-666Z.yml  page-2026-07-23T02-31-40-903Z.yml  page-2026-07-23T02-31-48-679Z.yml  page-2026-07-23T02-32-08-016Z.yml  page-2026-07-23T02-32-26-583Z.yml  page-2026-07-23T02-32-49-027Z.yml
afp_plugin/: Cargo.toml
afp_plugin/src/: lib.rs
afp_plugin/ui/: package.json  panel.js  panel.tsx  vite.config.ts
afp_plugin/ui/src/: AfpPanel.tsx  main.tsx
examples/data_plugin/: Cargo.toml  Makefile  PLUGIN_CONFIG.md
examples/data_plugin/src/: db.rs  handler.rs  handlers.rs  lib.rs  plugin.rs  routes.rs  service.rs  trait_impl.rs
examples/data_plugin/src/handler/: mod.rs
examples/data_plugin/src/metadata/: mod.rs
examples/data_plugin/src/model/: mod.rs
examples/data_plugin/src/repository/: mod.rs
examples/data_plugin/src/routes/: mod.rs
examples/data_plugin/src/service/: mod.rs
examples/data_plugin/ui/: index.html  package.json  tsconfig.app.json  vite.config.ts
examples/data_plugin/ui/src/: Panel.tsx  main.tsx
examples/data_plugin/ui/src/theme/: antd-theme-provider.tsx  theme-palette.ts  use-theme-mode.ts
examples/hello_plugin/: Cargo.toml  Makefile
examples/hello_plugin/src/: lib.rs
examples/news/: Makefile
examples/news/frontend/: package-lock.json
examples/news/frontend/src/: api.ts  micro.ts
examples/news/frontend/src/components/: PluginUi.tsx  PublishForm.tsx
examples/news/news_api/: Cargo.toml
examples/news/news_api/src/: lib.rs
examples/news/news_server/: Cargo.toml
examples/news/news_server/src/: lib.rs  main.rs
examples/news/plugins/afp_plugin/: Cargo.toml  Makefile
examples/news/plugins/afp_plugin/src/: lib.rs
examples/news/plugins/afp_plugin/ui/: index.html
examples/news/plugins/afp_plugin/ui/.playwright-cli/: page-2026-07-19T05-43-32-389Z.yml  page-2026-07-19T05-48-01-085Z.yml  page-2026-07-19T05-49-24-729Z.yml  page-2026-07-19T05-49-37-113Z.yml
examples/news/plugins/afp_plugin/ui/src/: AfpPanel.tsx
examples/news/plugins/reuters_plugin/: Cargo.toml  Makefile
examples/news/plugins/reuters_plugin/src/: lib.rs
examples/news/plugins/reuters_plugin/ui/: vite.config.ts
examples/news/plugins/reuters_plugin/ui/src/: main.ts
examples/standalone/: Cargo.toml
examples/standalone/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.playwright-cli/: page-2026-07-19T05-38-47-065Z.yml  page-2026-07-19T05-38-49-500Z.yml
frontend/scripts/: build-plugins.mjs
frontend/src/: App.css  App.tsx  LoginPage.tsx  api.ts  auth.ts  main.tsx  micro.ts  qiankun.d.ts
frontend/src/components/: LibraryList.tsx  Navbar.tsx  PluginList.tsx  PluginUi.tsx  Sidebar.tsx  theme-toggle.tsx
frontend/src/theme/: theme-palette.ts  use-theme-mode.tsx
news_api/: Cargo.toml
news_api/src/: lib.rs
news_host/: Cargo.toml
news_host/tests/: test_news_plugins.rs
news_server/: Cargo.toml
news_server/src/: main.rs
plugins/afp_plugin/: Cargo.toml  Makefile
plugins/afp_plugin/src/: lib.rs
plugins/reuters_plugin/: Cargo.toml  Makefile
plugins/reuters_plugin/src/: lib.rs
plugins/reuters_plugin/ui/: package.json
plugins_ui/afp_plugin/: ui.js
plugins_ui/reuters_plugin/: ui.js
reuters_plugin/: Cargo.toml
reuters_plugin/src/: lib.rs
reuters_plugin/ui/: index.html  package.json  panel.js  panel.tsx  tsconfig.app.json  vite.config.ts
reuters_plugin/ui/src/: ReutersPanel.tsx  ReutersPanel.vue  main.tsx
src/: cli.rs  config.rs  database.rs  error.rs  event_bus.rs  host.rs  lib.rs  main.rs  manager.rs  metadata.rs  plugin.rs
src/auth/: ctx.rs  error.rs  jwt.rs  middleware.rs  mod.rs  principal.rs  routes.rs  service.rs
tests/: auth_integration.rs
