[package]
name = "plugkit"
description = "Rust 通用插件管理框架 — 基于动态库加载，支持生命周期状态机、cron 调度、UI 嵌入与菜单聚合，可开箱即用地构建插件式宿主应用。"
authors = ["AtomGit <noreply@atomgit.com>"]
version = "0.2.0"
edition = "2021"
documentation = "https://docs.rs/plugkit/"
repository = "https://github.com/weibaohui/rust-plugin-demo.git"
license = "MIT"
readme = "README.md"
publish = true

[workspace]
members = []

[features]
default = ["config_serde"]
config_serde = ["serde"]

[dependencies]
libloading = "0.8"
log = "0.4"
search_path = "0.1"
rusqlite = { version = "0.29", features = ["bundled"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }

# host 模块依赖（通用插件宿主能力）
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
walkdir = "2"
mime_guess = "2"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
include_dir = "0.7"
serde_json = "1.0"
http = "1"
notify = { version = "7", features = ["macos_kqueue"] }
tar = "0.4"
flate2 = "1.0"

# 认证模块依赖
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"