[package]
name = "news_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dygpi = { version = "0.1", path = ".." }
news_api = { version = "0.1", path = "../news_api" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
chrono = "0.4"