[package]
name = "data_plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["dylib"]

[dependencies]
plugkit = { version = "0.2", path = "../.." }
http = "1"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
