[package]
name = "news_server"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["rlib"]

[dependencies]
plugkit = { version = "0.2", path = "../../.." }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
chrono = "0.4"
mime_guess = "2"
include_dir = "0.7"
log = "0.4"