[package]
name = "news_server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
plugkit = { version = "0.2", path = "../../.." }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"